--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
          <div class="menu-container">
             
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a  class="home" href="#">Home</a></li>
+                <li><a href="about-page/index.html">About</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Resume</a></li>
              </ul>
