--- a/Skills/index.html
+++ b/Skills/index.html
@@ -18,25 +18,11 @@
            
            <ul>
                <li><a href="../index.html">Home</a></li>
-               <li><a  id="about" href="#">About</a></li>
-               <li><a href="../Skills/index.html">Skills</a></li>
+               <li><a href="../about-page/">About</a></li>
+               <li><a class="skills" href="#">Skills</a></li>
                <li><a href="#">Resume</a></li>
             </ul>
-
-            
         </div>
-
-        <div class="title-container">
-            <h1 class="title">"ABOUT ME"</h1>
-        </div>
-
-        <article class="art-container">
-            <p class="paragraph">Hi, I'm Luis. A web developer from the Philippines who builds user-friendly websites were people can easily navigate and use.  </p>
-        </article>
    </header>
-   
-  
-
-   
 </body>
 </html>
