--- a/Skills/index.html
+++ b/Skills/index.html
@@ -23,6 +23,10 @@
                <li><a href="#">Resume</a></li>
             </ul>
         </div>
+
+        <div class="title-container">
+            <h2>"My Skills"</h2>
+        </div>
    </header>
 </body>
 </html>
