--- a/about-page/index.html
+++ b/about-page/index.html
@@ -33,6 +33,17 @@
         <article class="art-container">
             <p class="paragraph">Hi, I'm Luis. A web developer from the Philippines who builds user-friendly websites were people can easily navigate and use.  </p>
         </article>
+
+        <section>
+            <div class="section-container">
+                <div class="section-one">
+                    <video class="intro" controls type="video/mp4" src="../introduction-video.MOV" width="350px"></video>
+                </div>
+                    
+                <div class="section-two"></div>
+            </div>
+                
+        </section>
    </header>
    
   
