--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a  class="home" href="#">Home</a></li>
                 <li><a href="about-page/index.html">About</a></li>
-                <li><a href="#">Skills</a></li>
+                <li><a href="Skills/index.html">Skills</a></li>
                 <li><a href="#">Resume</a></li>
              </ul>
          </div>
@@ -37,9 +37,13 @@
         </div>
 
         <div class="btn-container">
-            <a class="btn" href="#">Hire Me</a>
+            <a class="btn" href="#">Download Resume</a>
         </div>
+
+        
     </section>
+
+   
 
     <footer class="footer">
     
