--- a/Skills/index.html
+++ b/Skills/index.html
@@ -23,10 +23,21 @@
                <li><a href="#">Resume</a></li>
             </ul>
         </div>
-
-        <div class="title-container">
-            <h2>"My Skills"</h2>
-        </div>
+        
    </header>
+
+   <article>
+    <div class="title-container">
+        <h2>SKILLS</h2>
+    </div>
+   </article>
+
+   <section>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+   </section>
 </body>
 </html>
