--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <article>
             <div class="quote">
                 <p>Hi, I'm Luis!
-                    I don't just build Websites, I build websites that Sells! Test commit</p>
-                    <p>another test</p>
+                    I don't just build Websites, I build websites that Sells!</p>
+                    
             </div>
         </article>
         <footer>
