--- a/Skills/index.html
+++ b/Skills/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/7520d132f7.js" crossorigin="anonymous"></script>
     <title>Luis Camus</title>
 </head>
 <body>
@@ -33,11 +34,20 @@
    </article>
 
    <section>
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
+    <div class="html item">item1</div>
+    <div class="css item">item2</div>
+    <div class="javascript item">item3</div>
    </section>
+
+   <footer>
+    <div class="social-icons">
+        <ul>
+            <li><a href="https://www.facebook.com/Luiseeks/"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/luis.scrd/"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://github.com/Gradientick"><i class="fa-brands fa-github"></i></a></li>
+            
+        </ul>
+    </div>
+</footer>
 </body>
 </html>
