--- a/Skills/index.html
+++ b/Skills/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/7520d132f7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/7520d132f7.js" crossorigin="anonymous"></script>
     <title>Luis Camus</title>
@@ -34,9 +35,33 @@
    </article>
 
    <section>
-    <div class="html item">item1</div>
-    <div class="css item">item2</div>
-    <div class="javascript item">item3</div>
+    <div class="html item">
+        <i class="fa-brands fa-css3-alt fa-beat fa-lg"></i></div>
+    <div class="css item">
+        <i class="fa-brands fa-html5 fa-beat fa-lg"></i>
+    </div>
+    <div class="javascript item">
+        <i class="fa-brands fa-square-js fa-beat fa-lg"></i>
+    </div>
+   </section>
+
+   <section class="another-container">
+        <div class="title">
+            <h2 class="featured">Featured Projects</h2>
+        </div>
+
+        <div class="rowmaker">
+             <div class="subitem1">
+                <picture></picture>
+            </div>
+            <div class="subitem2">
+                <picture></picture>
+            </div>
+             <div class="subitem3">
+                 <picture></picture>
+            </div>
+        </div>
+  
    </section>
 
    <footer>
