--- a/Skills/index.html
+++ b/Skills/index.html
@@ -52,13 +52,19 @@
 
         <div class="rowmaker">
              <div class="subitem1">
-                <picture></picture>
+                <picture>
+                    <a href="https://gradientick.github.io/LC-CSS-Foundations.github.io/"><img src="../images/css-grid.png" alt="project-1"></a>
+                </picture>
             </div>
             <div class="subitem2">
-                <picture></picture>
+                <picture>
+                    <a href="https://gradientick.github.io/LC-CSS-Foundations.github.io/"><img src="../images/html-forms.png" alt="project-2"></a>
+                </picture>
             </div>
              <div class="subitem3">
-                 <picture></picture>
+                 <picture>
+                    <a href="https://gradientick.github.io/gradientickfalse.github.io/"><img src="../images/projectlast.png" alt=""></a>
+                 </picture>
             </div>
         </div>
   
