--- a/Skills/index.html
+++ b/Skills/index.html
@@ -51,23 +51,18 @@
         </div>
 
         <div class="rowmaker">
-             <div class="subitem1">
-                <picture>
-                    <a href="https://gradientick.github.io/LC-CSS-Foundations.github.io/"><img src="../images/css-grid.png" alt="project-1"></a>
-                </picture>
-            </div>
-            <div class="subitem2">
-                <picture>
-                    <a href="https://gradientick.github.io/LC-CSS-Foundations.github.io/"><img src="../images/html-forms.png" alt="project-2"></a>
-                </picture>
-            </div>
-             <div class="subitem3">
-                 <picture>
-                    <a href="https://gradientick.github.io/gradientickfalse.github.io/"><img src="../images/projectlast.png" alt=""></a>
-                 </picture>
-            </div>
+             <div class="subitem">
+                <a href="https://gradientick.github.io/HTML-Forms/" target="_blank">
+                <h3>HTML-FORM</h3>
+                </a>
+             </div>
+             <div class="subitem">
+                <a href="https://gradientick.github.io/LC-CSS-Foundations.github.io/" target="_blank">
+                <h3>CSS-Foundations</h3>
+                </a>
+             </div>
         </div>
-  
+
    </section>
 
    <footer>
