--- a/about-page/index.html
+++ b/about-page/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Luis Camus</title>
+    <script src="https://kit.fontawesome.com/7520d132f7.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -43,6 +44,17 @@
                 
         </section>
    </header>
+
+   <footer>
+    <div class="social-icons">
+        <ul>
+            <li><a href="https://www.facebook.com/Luiseeks/"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/luis.scrd/"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://github.com/Gradientick"><i class="fa-brands fa-github"></i></a></li>
+            
+        </ul>
+    </div>
+   </footer>
    
   
 
