--- a/Skills/index.html
+++ b/Skills/index.html
@@ -22,7 +22,7 @@
                <li><a href="../index.html">Home</a></li>
                <li><a href="../about-page/">About</a></li>
                <li><a class="skills" href="#">Skills</a></li>
-               <li><a href="#">Resume</a></li>
+               <li><a href="../luis-camus-resume.pdf" target="_blank">Resume</a></li>
             </ul>
         </div>
         
@@ -30,47 +30,38 @@
 
    <article>
     <div class="title-container">
-        <h2>SKILLS</h2>
+        <h2>"SKILLS"</h2>
     </div>
    </article>
 
    <section>
     <div class="html item">
-        <i class="fa-brands fa-css3-alt fa-beat fa-lg"></i></div>
+        <i class="fa-brands fa-css3-alt fa-lg"></i></div>
     <div class="css item">
-        <i class="fa-brands fa-html5 fa-beat fa-lg"></i>
+        <i class="fa-brands fa-html5 fa-lg"></i>
     </div>
     <div class="javascript item">
-        <i class="fa-brands fa-square-js fa-beat fa-lg"></i>
+        <i class="fa-brands fa-square-js fa-lg"></i>
     </div>
    </section>
 
-   <section class="another-container">
-        <div class="title">
-            <h2 class="featured">Featured Projects</h2>
-        </div>
+   <div class="featured">
+        <h3>Featured Projects</h3>
+   </div>
 
-        <div class="rowmaker">
-             <div class="subitem">
-                <a href="https://gradientick.github.io/HTML-Forms/" target="_blank">
-                <h3>HTML-FORM</h3>
-                </a>
-             </div>
-             <div class="subitem">
-                <a href="https://gradientick.github.io/LC-CSS-Foundations.github.io/" target="_blank">
-                <h3>CSS-Foundations</h3>
-                </a>
-             </div>
-        </div>
+   <div class="projects">
+    <div class="project-item"><a href="https://gradientick.github.io/rock-paper-scissor-exercise/" target="_blank">rock-paper-scissor-exercise</a></div>
+    <div class="project-item"><a href="https://gradientick.github.io/HTML-Forms/" target="_blank">HTML-Forms</a></div>
+   </div>
 
-   </section>
+
 
    <footer>
     <div class="social-icons">
         <ul>
-            <li><a href="https://www.facebook.com/Luiseeks/"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://www.instagram.com/luis.scrd/"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://github.com/Gradientick"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="https://www.facebook.com/Luiseeks/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/luis.scrd/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://github.com/Gradientick" target="_blank"><i class="fa-brands fa-github"></i></a></li>
             
         </ul>
     </div>
