--- a/about-page/index.html
+++ b/about-page/index.html
@@ -21,7 +21,7 @@
                <li><a href="../index.html">Home</a></li>
                <li><a  id="about" href="#">About</a></li>
                <li><a href="../Skills/index.html">Skills</a></li>
-               <li><a href="#">Resume</a></li>
+               <li><a href="../luis-camus-resume.pdf" target="_blank">Resume</a></li>
             </ul>
 
             
@@ -45,16 +45,7 @@
         </section>
    </header>
 
-   <footer>
-    <div class="social-icons">
-        <ul>
-            <li><a href="https://www.facebook.com/Luiseeks/"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://www.instagram.com/luis.scrd/"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://github.com/Gradientick"><i class="fa-brands fa-github"></i></a></li>
-            
-        </ul>
-    </div>
-   </footer>
+  
    
   
 
