--- a/Skills/index.html
+++ b/Skills/index.html
@@ -22,12 +22,12 @@
                <li><a href="../index.html">Home</a></li>
                <li><a href="../about-page/">About</a></li>
                <li><a class="skills" href="#">Skills</a></li>
-               <li><a href="../luis-camus-resume.pdf" target="_blank">Resume</a></li>
+               <li><a href="../Luis-Camus-Resume.pdf" target="_blank">Resume</a></li>
             </ul>
         </div>
-        
    </header>
 
+<div class="holder">
    <article>
     <div class="title-container">
         <h2>"SKILLS"</h2>
@@ -53,7 +53,7 @@
     <div class="project-item"><a href="https://gradientick.github.io/rock-paper-scissor-exercise/" target="_blank">rock-paper-scissor-exercise</a></div>
     <div class="project-item"><a href="https://gradientick.github.io/HTML-Forms/" target="_blank">HTML-Forms</a></div>
    </div>
-
+</div>
 
 
    <footer>
