--- a/about-page/index.html
+++ b/about-page/index.html
@@ -21,7 +21,7 @@
                <li><a href="../index.html">Home</a></li>
                <li><a  id="about" href="#">About</a></li>
                <li><a href="../Skills/index.html">Skills</a></li>
-               <li><a href="../luis-camus-resume.pdf" target="_blank">Resume</a></li>
+               <li><a href="../Luis-Camus-Resume.pdf" target="_blank">Resume</a></li>
             </ul>
 
             
