--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a  class="home" href="#">Home</a></li>
                 <li><a href="about-page/index.html">About</a></li>
                 <li><a href="Skills/index.html">Skills</a></li>
-                <li><a href="luis-camus-resume.pdf">Resume</a></li>
+                <li><a href="Luis-Camus-Resume.pdf">Resume</a></li>
              </ul>
          </div>
     </header>
@@ -30,7 +30,7 @@
                 <img src="images/no color.png" alt="Photo of the author" class="image">
             </picture>
             <div class="resume">
-                <a href="luis-camus-resume.pdf" target="_blank">Download Resume</a>
+                <a href="Luis-Camus-Resume.pdf" target="_blank">Download Resume</a>
             </div>
         </div>
         <article>
