--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <footer>
             <div class="social-icons">
                 <ul>
-                    <li><a href="https://www.facebook.com/Luiseeks/"><i class="fa-brands fa-facebook"></i></a></li>
-                    <li><a href="https://www.instagram.com/luis.scrd/"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="https://github.com/Gradientick"><i class="fa-brands fa-github"></i></a></li>
+                    <li><a href="https://www.facebook.com/Luiseeks/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com/luis.scrd/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://github.com/Gradientick" target="_blank"><i class="fa-brands fa-github"></i></a></li>
                     
                 </ul>
             </div>
