--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     <div class="form">
         <form>
             <h3>Get in Touch</h3>
-            <input type="text" id="name" placeholder="Your Name" required>
-            <input type="email" id="email" placeholder="example@sample.com" required>
-            <input type="text" id="" placeholder="Phone no." required>
-            <textarea id="message" rows="4" placeholder="How can I help you?"></textarea>
-            <button type="submit">Send</button>
+            <input type="text" id="name" placeholder="Your Name" maxlength="25" required>
+            <input type="email" id="email" placeholder="example@sample.com" maxlength="20" required>
+            <input type="text" id="" placeholder="Phone no." maxlength="12" required>
+            <textarea id="message" rows="4" placeholder="How can I help you?" maxlength="100"></textarea>
+            <button id="submit" type="submit">Send</button>
         </form>
     </div>
   
