--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a  class="home" href="#">Home</a></li>
                 <li><a href="about-page/index.html">About</a></li>
                 <li><a href="Skills/index.html">Skills</a></li>
-                <li><a href="Luis-Camus-Resume.pdf">Resume</a></li>
+                <li><a href="Luis-Camus-Resume.pdf">Download Resume</a></li>
              </ul>
          </div>
     </header>
@@ -67,7 +67,7 @@
     </footer>
 
 </div>
-  
- 
+  <script src="js/script.js"></script>
+</body>
 </html>
     
