--- a/index.html
+++ b/index.html
@@ -93,19 +93,20 @@
                 </li>
             </ul>
          </section>
-
          <section class="form-section">
-            <div class="form">
-                <form action="https://formsubmit.co/e77adb37ef610502094b6375d162fb96" method="POST">
-                    <h3>Get in Touch</h3>
-                    <input type="text" name="name" id="name" placeholder="Your Name" maxlength="25" required>
-                    <input type="email" name="email" id="email" placeholder="example@sample.com" maxlength="30" required>
-                    <input type="text" name="phone" id="phone" placeholder="Phone no." maxlength="12" required>
-                    <textarea id="message" name="message" rows="4" placeholder="How can I help you?" maxlength="150"></textarea>
-                    <button id="submit" type="submit">Send</button>
-                </form>
-            </div>
-         </section>
+            <form action="https://formsubmit.co/camus.luis95@gmail.com" method="POST" target="_blank">
+                <h1>Get in touch</h1>
+                <label for="name">Name:</label>
+                <input type="text" name="name" id="name" placeholder="enter your name here" maxlength="35" required>
+                <label for="email">Email:</label>
+                <input type="email" name="email" id="email" placeholder="helloworld@example.com" maxlength="35" required>
+                <label for="number">Phone Number:</label>
+                <input type="text" name="phone no." id="number" maxlength="12">
+                <label for="message">Message:</label>
+                <textarea name="message" id="message" cols="30" rows="10" placeholder="enter your message here"></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </section>
 
 </main>
 <footer>
